--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
   },
   "dependencies": {
     "@auth/core": "^0.37.4",
+    "@capacitor/android": "^8.0.2",
+    "@capacitor/cli": "^8.0.2",
+    "@capacitor/core": "^8.0.2",
+    "@capacitor/local-notifications": "^8.0.0",
     "@convex-dev/auth": "^0.0.90",
     "clsx": "^2.1.1",
     "convex": "^1.31.7",
